--- a/BogWebShop/Areas/CMS/Views/Home/Index.cshtml
+++ b/BogWebShop/Areas/CMS/Views/Home/Index.cshtml
@@ -20,18 +20,29 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6">
-
-        </div>
-        <div class="col-sm-6">
-            <h2>Kønsfordeling</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-7 fisk">
+        <div class="col-sm-3">
+            <h2 class="text-center" style="margin-top:70px;">Total indtjening</h2>
+            <h5 class="text-center">232.312 DKK</h5>
+            <h2 class="text-center" style="margin-top:70px;">Salg af produkter</h2>
+            <h5 class="text-center">7012 Produkter</h5>
         </div>
         <div class="col-sm-3">
-            <canvas id="myChart3"></canvas>
+            <h2 class="text-center" style="margin-top:70px;">Gennemsnit per salg</h2>
+            <h5 class="text-center">33.12 DKK</h5>
+            <h2 class="text-center" style="margin-top:70px;">Profit per salg</h2>
+            <h5 class="text-center">17.53 DKK</h5>
+        </div>
+        <div class="col-sm-3">
+            <h2 class="text-center" style="margin-top:70px;">Kunde Værdi</h2>
+            <h5 class="text-center">26.50 DKK</h5>
+            <h2 class="text-center" style="margin-top:70px;">Oprettede Kunder</h2>
+            <h5 class="text-center">16.512</h5>
+        </div>
+        <div class="col-sm-3">
+            <h2 class="text-center" style="margin-top:70px;">Top 3 Produkter</h2>
+            <h5 class="text-center" style="margin-top:30px;"> C# For Begyndere</h5>
+            <h5 class="text-center" style="margin-top:30px;"> PHP For Begyndere</h5>
+            <h5 class="text-center" style="margin-top:30px;"> HTML For Begyndere</h5>
         </div>
     </div>
 </div>
