--- a/BogWebShop/Css/mainstyle.css
+++ b/BogWebShop/Css/mainstyle.css
@@ -26,6 +26,9 @@ img {
   max-width: 100%;
   height: auto; }
 
+h3 {
+  margin-bottom: 0px; }
+
 header {
   width: 100%;
   position: fixed;
@@ -68,20 +71,12 @@ nav {
 i {
   margin-right: 5px; }
 
-footer {
-  width: 100%;
-  background-color: black;
-  padding: 5px;
-  color: white;
-  text-align: center; }
-
 select {
   display: block !important;
   float: right !important; }
 
 #contactus {
   max-width: 500px;
-  margin-top: 200px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
