--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -32,8 +32,8 @@
           <li><a href="/Home/Index"><i class="fa fa-home"></i>Forside</a></li>
         <li id="cartHolder">
 			<a class="cartbutton position-relative">
-                <span id="counter"> </span>
-            <i class="fa fa-shopping-basket" style="display:none;"></i>Kurv</a>
+                <span id="counter" style="display:none;"> </span>
+            <i class="fa fa-shopping-basket"></i>Kurv</a>
 			<ul id="Cart">
 			</ul>
 		</li>
