--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="da">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+	<meta charset="utf-8"/>
+	<meta name="description" content="Køb webdesign bøger"/>
+	<meta name="keywords" content="web,design,bøger"/>
+	<meta name="author" content="Mads Nissen, Dennis Spandet, Lasse, Daniel"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Læs webudvikling | @ViewBag.Title</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet"/>
     <link href="~/Css/CMS/Bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Css/mainstyle.min.css" rel="stylesheet" />
-    <title>@ViewBag.Title</title>
 	<script type="text/template" id="Template-cartItem">
 		<div class="cartContent">
 			<span>{{Name}}</span>
