--- a/BogWebShop/Views/Shared/_MainLayout.cshtml
+++ b/BogWebShop/Views/Shared/_MainLayout.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link href="~/Css/CMS/Bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="~/Css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
